# serializer version: 1
# name: test_entities[light.bedroom_kid_1_led_buttonon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.bedroom_kid_1_led_buttonon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED ButtonOn',
    'platform': 'velbus',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 8>,
    'translation_key': None,
    'unique_id': 'a1b2c3d4e5f6-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.bedroom_kid_1_led_buttonon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Bedroom kid 1 LED ButtonOn',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 8>,
    }),
    'context': <ANY>,
    'entity_id': 'light.bedroom_kid_1_led_buttonon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[light.dimmer_full_name_dimmer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmer_full_name_dimmer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dimmer',
    'platform': 'velbus',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': None,
    'unique_id': 'a1b2c3d4e5f6g7-10',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.dimmer_full_name_dimmer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Dimmer full name Dimmer',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmer_full_name_dimmer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
